--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <% if true %>
+        <% if user_signed_in? %>
           <li><a href="/users/edit"><%= current_user.email %></a></li>
           <li><a href="/users/sign_out" data-method="delete">Sign out</a></li>
         <% else %>
